--- a/build.gradle
+++ b/build.gradle
@@ -23,9 +23,11 @@ repositories {
 
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-web'
+    implementation 'com.googlecode.xmemcached:xmemcached:2.4.8'
 	compileOnly 'org.projectlombok:lombok'
 	annotationProcessor 'org.projectlombok:lombok'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+    testImplementation 'ch.qos.logback:logback-classic:1.5.3'
 }
 
 tasks.named('test') {
