--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.application.name=api
 
 gnews.api.key=${GNEWS_API_KEY}
-gnews.api.url=https://gnews.io/api/v4/search
+gnews.api.url=${GNEWS_API_URL:https://gnews.io/api/v4/search}
 
-memcached.servers=localhost:11211
+memcached.url=${MEMCACHED_URL:localhost:11211}
